Fix: Project titles overflow on mobile view and skill section

--- a/src/scss/sections/_projects.scss
+++ b/src/scss/sections/_projects.scss
@@ -79,7 +79,8 @@
 
       &-info {
         z-index: 5;
-        width: 450px;
+        width: clamp(300px, 40vw, 450px); // More flexible
+        max-width: 100%;
         display: flex;
         flex-direction: column;
         align-items: flex-end;
@@ -91,7 +92,7 @@
         }
 
         &-title {
-          width: 100%;
+          width: 98%;
           color: var(--lightest-slate);
           font-size: var(--txlarge);
           font-family: var(--raleway);
